assignments/pa3/testsuite/cgen/out/book_list.cl.spim.err
spim: (parser) syntax error on line 400 of file /home/raj/cool/distro/assignments/pa3/testsuite/cgen/out/book_list.cl.out
	  .word	-1
	  ^
Instruction references undefined symbol at 0x0040129c
